@@ -1,6 +1,6 @@
 <?php
 // DO NOT CHANGE THIS FILE! It is automatically generated by extdeveval::buildAutoloadRegistry.
-// This file was generated on 2010-09-25 13:08
+// This file was generated on 2011-10-05 20:12
 
 $extensionPath = t3lib_extMgm::extPath('oelib');
 return array(
@@ -50,8 +50,8 @@ return array(
 	'tx_oelib_exception_emptyqueryresult' => $extensionPath . 'Exception/class.tx_oelib_Exception_EmptyQueryResult.php',
 	'tx_oelib_exception_notfound' => $extensionPath . 'Exception/class.tx_oelib_Exception_NotFound.php',
 	'tx_oelib_geocoding_calculator' => $extensionPath . 'Geocoding/Calculator.php',
-	'tx_oelib_geocoding_dummy' => $extensionPath . 'Geocoding/class.tx_oelib_Geocoding_Dummy.php',
-	'tx_oelib_geocoding_google' => $extensionPath . 'Geocoding/class.tx_oelib_Geocoding_Google.php',
+	'tx_oelib_geocoding_dummy' => $extensionPath . 'Geocoding/Dummy.php',
+	'tx_oelib_geocoding_google' => $extensionPath . 'Geocoding/Google.php',
 	'tx_oelib_interface_sortable' => $extensionPath . 'Interface/Sortable.php',
 	'tx_oelib_interface_address' => $extensionPath . 'Interface/class.tx_oelib_Interface_Address.php',
 	'tx_oelib_interface_geo' => $extensionPath . 'Interface/class.tx_oelib_Interface_Geo.php',
